src/test/ui/span/send-is-not-static-ensures-scoping.stderr
error[E0597]: `x` does not live long enough
  --> $DIR/send-is-not-static-ensures-scoping.rs:26:18
   |
26 |         let y = &x;
   |                  ^ borrowed value does not live long enough
...
33 |     };
   |     - `x` dropped here while still borrowed
...
36 | }
   | - borrowed value needs to live until here

error[E0597]: `y` does not live long enough
  --> $DIR/send-is-not-static-ensures-scoping.rs:30:22
   |
29 |         scoped(|| {
   |                -- capture occurs here
30 |             let _z = y;
   |                      ^ borrowed value does not live long enough
...
33 |     };
   |     - borrowed value only lives until here
...
36 | }
   | - borrowed value needs to live until here

error: aborting due to 2 previous errors

